--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -33,3 +33,14 @@
     text-decoration: underline !important;
     color: white !important;
 }
+
+.xxl {
+    font-size: 2rem;
+    padding: 0 .6rem;
+}
+
+.xxl:hover {
+    font-size: 2.2rem;
+    transition: all 0.6s ease-in-out;
+    cursor: pointer;
+}
